multislider fix of z-index

--- a/evopie/static/multislider.css
+++ b/evopie/static/multislider.css
@@ -36,16 +36,6 @@ div.slider-handle {
     font-size: 80%;
 }
 
-div.slider-handle-0 {
-    z-index: 45;
-}
-div.slider-handle-1 {
-    z-index: 44;
-}
-div.slider-handle-2 {
-    z-index: 43;
-}
-
 /* div.slider-handle:nth-child(odd) {
     height: 120%;
     background-color: gray;
@@ -57,5 +47,4 @@ div.slider-handle:hover {
 
 div.slider-handle.active {
     border-width: 2px;
-    z-index: 50;
 }
